<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">打车客户端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">乘客端</string>
    <string name="username">帐号</string>
    <string name="psword">密码</string>
    <string name="username_hint">请输入帐号</string>
    <string name="repsword_hint">请重复密码</string>
    <string name="psword_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="repsword">确认密码</string>
    <string name="back">返回</string>
    <string name="commit">提交</string>
    <string name="license_is">牌照为</string>
    <string name="car_is_orders">的车辆已经接单</string>
    <string name="exit_app">再次点击退出程序</string>
    <string name="phone_number">电话号码</string>
    <string name="putin_phone">请输入电话号码</string>
</resources>
