<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username_hint" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/putin_phone" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/psword"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_psword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:hint="@string/psword_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/repsword"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/register_repsword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/repsword_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="25dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/register_back_button"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/calltaxi_style_button"
            android:text="@string/back"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/finish_register_button"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/calltaxi_style_button"
            android:text="@string/register"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>